<resources>
    <string name="app_name">Game Backlog</string>
    <string name="action_delete_all">Delete Game Backlog</string>
    <string name="title_activity_add">Add a game</string>
    <string name="release_date">Release: %1$s/%2$s/%3$s</string>
    <string name="title_game">Title</string>
    <string name="platform_game">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
</resources>
